Fixed crash reporter not fitting and the button sizes

--- a/thrive.css
+++ b/thrive.css
@@ -126,7 +126,6 @@ hr.style2 {
   vertical-align: middle;
   text-align: center;
   display: inline-block;
-  height: 45px;
   color: #dedede;
   border-radius: 2px;
   background: linear-gradient(to top, rgba(22, 22, 22, 0.6), rgb(63, 63, 63));
